adicionado imagem das patinhas e algumas mudanças no activity do login

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -14,7 +14,7 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/logoImageView"
+        android:id="@+id/ImgLogo"
         android:layout_width="250px"
         android:layout_height="250px"
         android:src="@drawable/docvet"
